--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 	   var name = prompt("Your name?", "Guest");
 	   $("#nameInput").val(name);
       var dataRef = new Firebase('https://eventsynergy.firebaseio.com/test/chat');
-      var userListRef = new Firebase('https://eventsynergy.firebaseio.com/test/presence');
-      var myStatus = userListRef.child(name);
-      var currentStatus = '? online';
       $('#messageInput').keypress(function (e) {
         if (e.keyCode == 13) {
           var name = $('#nameInput').val();
@@ -31,9 +28,16 @@
         $('#messagesDiv')[0].scrollTop = $('#messagesDiv')[0].scrollHeight;
       };
       dataRef.on('child_added', function(snapshot) {
+        //console.log("Dataref child added triggered");
         var message = snapshot.val();
         printChatMessage(message.name, message.text);
       });
+      
+    	var userListRef = new Firebase('https://eventsynergy.firebaseio.com/test/presence');
+      var myStatus = userListRef.child(name);
+      var currentStatus = '? online';
+
+
       function setUserStatus(status) {
 		    currentStatus = status;
 		    //if we lose our internet connection, we want ourselves removed from the list.
@@ -77,6 +81,7 @@
 
   setIdleTimeout(5000);
   setAwayTimeout(10000);
+
     </script>
   </body>
 </html>
